# AutoAgent

./: .gitignore  CODEBUDDY.md  Readme.md  pyproject.toml  run_notepad_test.py
.agent/: env_setup.ps1
.agent/handoffs/: T-A.1.md  T-A.2.md  T-A.3.md  T-A.4.md  T-A.5.md  T-B.1.md  T-B.2.md  T-B.3.md  T-B.4.md  T-B.5.md  T-B.6.md  T-B.7.md  T-C.1.md  T-C.2.md
.agent/reviews/: T-A.1.md  T-A.2.md  T-A.3.md  T-A.4.md  T-A.5.md  T-B.1.md  T-B.2.md  T-B.3.md  T-B.4.md  T-B.5.md  T-B.6.md  T-B.7.md  T-C.1.md  T-C.2.md  T-C.3.md  T-C.4.md  T-C.5.md  T-D.1.md  T-D.2.md  T-D.3.md  T-D.4.md  T-D.5.md  T-E.1.md
.agent/state/: task_status.jsonl
.codebuddy/teams/review-team/: config.json
config/: model.yaml
docs/: dev_workflow.md  development_plan.md  maiui_wsl2_deploy.md  product_document.md  project_status.md  task_document.md  uitars_migration_plan.md  uitars_wsl2_deploy.md  wsl2_vllm_deploy.md
docs/demo/: notepad.md
scripts/: _smoke_uitars_parser.py  annotate_session.py  probe_maiui.py  probe_maiui_calc.py  probe_maiui_matrix.py  probe_uitars.py  run_live_probe.py
scripts/benchmarks/: grounding_accuracy.py  notepad_stability.py
scripts/demo/: notepad_target_broken.py  notepad_target_ok.py
src/autovisiontest/: __init__.py  cli.py  exceptions.py  logging_setup.py
src/autovisiontest/backends/: claude.py  factory.py  maiui.py  openai_backend.py  protocol.py  showui.py  types.py  uitars.py  vllm_chat.py
src/autovisiontest/cases/: __init__.py  consolidator.py  fingerprint.py  schema.py  store.py
src/autovisiontest/config/: __init__.py  loader.py  schema.py
src/autovisiontest/control/: __init__.py  actions.py  dpi.py  executor.py  mouse.py  (+4 more)
tests/: __init__.py
tests/benchmarks/: grounding_accuracy.md  notepad_stability.md
tests/e2e/: test_notepad_broken_fix.py  test_notepad_exploration.py  test_notepad_regression.py
tests/unit/: test_cli.py  test_exceptions.py  test_init.py  test_init_edge_cases.py  test_logging_setup.py  test_logging_setup_edge_cases.py
(+87 files in other folders)
