[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autovisiontest"
version = "0.1.0"
description = "AI-vision-driven desktop application black-box automated testing framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "xslkim" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "click>=8.0",
    # Desktop control
    "pyautogui>=0.9",
    "pywin32>=306",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8",
    "mss>=9.0",
    # Vision
    "opencv-python>=4.8",
    "pillow>=10.0",
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
    # Model backends
    "anthropic>=0.30",
    "openai>=1.0",
    "dashscope>=1.14",
    "httpx>=0.25",
    # HTTP
    "fastapi>=0.104",
    "uvicorn>=0.24",
    # MCP
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.1",
]

[project.scripts]
autovisiontest = "autovisiontest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autovisiontest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "desktop: tests that require a physical desktop (skipped in CI)",
    "vllm: tests that require a running vLLM server",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
